--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Shuffle",
-  "name": "Shuffle webapp",
+  "short_name": "Straife",
+  "name": "Straife webapp",
   "icons": [
     {
       "src": "favicon.ico",
